src/rules/flake8_return/snapshots/ruff__rules__flake8_return__tests__RET501_RET501.py.snap
---
source: src/rules/flake8_return/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryReturnNone: ~
  location:
    row: 4
    column: 4
  end_location:
    row: 4
    column: 15
  fix:
    content: return
    location:
      row: 4
      column: 4
    end_location:
      row: 4
      column: 15
  parent: ~

