src/rules/flake8_return/snapshots/ruff__rules__flake8_return__tests__RET504_RET504.py.snap
---
source: src/rules/flake8_return/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryAssign: ~
  location:
    row: 6
    column: 11
  end_location:
    row: 6
    column: 12
  fix:
    content:
      - return 1
    location:
      row: 5
      column: 4
    end_location:
      row: 6
      column: 12
  parent: ~
- kind:
    UnnecessaryAssign: ~
  location:
    row: 13
    column: 11
  end_location:
    row: 13
    column: 12
  fix:
    content:
      - return 2
    location:
      row: 12
      column: 4
    end_location:
      row: 13
      column: 12
  parent: ~
- kind:
    UnnecessaryAssign: ~
  location:
    row: 19
    column: 15
  end_location:
    row: 19
    column: 16
  fix:
    content:
      - "if True:"
      - "        return 2"
    location:
      row: 17
      column: 4
    end_location:
      row: 19
      column: 16
  parent: ~
- kind:
    UnnecessaryAssign: ~
  location:
    row: 31
    column: 11
  end_location:
    row: 31
    column: 17
  fix:
    content:
      - return str(obj.bar)
    location:
      row: 30
      column: 8
    end_location:
      row: 31
      column: 17
  parent: ~
- kind:
    UnnecessaryAssign: ~
  location:
    row: 39
    column: 11
  end_location:
    row: 39
    column: 20
  fix:
    content:
      - "return formatted.replace(\"()\", \"\").replace(\"  \", \" \").strip()"
    location:
      row: 38
      column: 4
    end_location:
      row: 39
      column: 20
  parent: ~

