src/rules/flake8_return/snapshots/ruff__rules__flake8_return__tests__RET506_RET506.py.snap
---
source: src/rules/flake8_return/mod.rs
expression: diagnostics
---
- kind:
    SuperfluousElseRaise: Elif
  location:
    row: 5
    column: 4
  end_location:
    row: 13
    column: 26
  fix: ~
  parent: ~
- kind:
    SuperfluousElseRaise: Elif
  location:
    row: 17
    column: 4
  end_location:
    row: 26
    column: 13
  fix: ~
  parent: ~
- kind:
    SuperfluousElseRaise: Else
  location:
    row: 31
    column: 4
  end_location:
    row: 36
    column: 26
  fix: ~
  parent: ~
- kind:
    SuperfluousElseRaise: Else
  location:
    row: 42
    column: 8
  end_location:
    row: 47
    column: 30
  fix: ~
  parent: ~
- kind:
    SuperfluousElseRaise: Else
  location:
    row: 54
    column: 4
  end_location:
    row: 61
    column: 13
  fix: ~
  parent: ~
- kind:
    SuperfluousElseRaise: Else
  location:
    row: 67
    column: 8
  end_location:
    row: 71
    column: 17
  fix: ~
  parent: ~
- kind:
    SuperfluousElseRaise: Else
  location:
    row: 78
    column: 4
  end_location:
    row: 84
    column: 33
  fix: ~
  parent: ~

