src/rules/flake8_return/snapshots/ruff__rules__flake8_return__tests__RET508_RET508.py.snap
---
source: src/rules/flake8_return/mod.rs
expression: diagnostics
---
- kind:
    SuperfluousElseBreak: Elif
  location:
    row: 6
    column: 8
  end_location:
    row: 11
    column: 17
  fix: ~
  parent: ~
- kind:
    SuperfluousElseBreak: Elif
  location:
    row: 16
    column: 8
  end_location:
    row: 25
    column: 17
  fix: ~
  parent: ~
- kind:
    SuperfluousElseBreak: Else
  location:
    row: 31
    column: 8
  end_location:
    row: 34
    column: 17
  fix: ~
  parent: ~
- kind:
    SuperfluousElseBreak: Else
  location:
    row: 41
    column: 12
  end_location:
    row: 46
    column: 21
  fix: ~
  parent: ~
- kind:
    SuperfluousElseBreak: Else
  location:
    row: 54
    column: 8
  end_location:
    row: 61
    column: 17
  fix: ~
  parent: ~
- kind:
    SuperfluousElseBreak: Else
  location:
    row: 68
    column: 12
  end_location:
    row: 72
    column: 21
  fix: ~
  parent: ~
- kind:
    SuperfluousElseBreak: Else
  location:
    row: 80
    column: 8
  end_location:
    row: 86
    column: 21
  fix: ~
  parent: ~

